[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/forward.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/backward.png" type="Texture" id=2]
[ext_resource path="res://ui/OptionSwitcher.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 0 )

[node name="OptionSwitcher" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
focus_mode = 0
mouse_filter = 1
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_left = 54.0
margin_top = 16.0
margin_right = 1226.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 1 )
text = "Option"
align = 1

[node name="ForwardButton" type="TextureButton" parent="VBoxContainer"]
margin_left = 1230.0
margin_right = 1280.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
focus_mode = 0
mouse_filter = 1
enabled_focus_mode = 0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="." to="." method="_on_OptionSwitcher_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_OptionSwitcher_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_OptionSwitcher_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_OptionSwitcher_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ForwardButton" to="." method="_on_ForwardButton_pressed"]
